BR-43 [BE] yaml 파일 분리

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,9 @@
 spring:
-  datasource:
-    url: jdbc:h2:mem:testdb # ??? ? H2 ??????
-    username: sa
-    password: password
-  h2:
-    console:
-      enabled: true # H2 ?? ??? (?????? ?????? ?? ??)
-      path: /h2-console
-  jpa:
-    hibernate:
-      ddl-auto: update # ???? DDL ?? (update? ?????? ???? ??)
-    show-sql: true # ??? SQL ?? ??
+  config:
+    import:
+      - application-dev.yml
+      - application-prod.yml
+
+logging:
+  level:
+    root: ${LOG_LEVEL:info}
