--- a/build.gradle
+++ b/build.gradle
@@ -26,12 +26,12 @@ repositories {
 dependencies {
 
     // Spring Boot Starters
-    implementation 'org.springframework.boot:spring-boot-starter-actuator:3.2.3'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.2.3'
-    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:3.2.3'
-    implementation 'org.springframework.boot:spring-boot-starter-security:3.2.3'
-    implementation 'org.springframework.boot:spring-boot-starter-validation:3.2.3'
-    implementation 'org.springframework.boot:spring-boot-starter-web:3.2.3'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
 //    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
     // Database
