--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,3 @@
 spring:
-  config:
-    import:
-      - application-secret.yml
   profiles:
-    active: local  # 기본 프로파일을 local로 설정
+    active: ${profile}
