--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -16,6 +16,7 @@ spring:
       hibernate:
         format_sql: false
         default_batch_fetch_size: 100
+        default_timezone: Asia/Seoul
 
   # — Kakao Integration (프로덕션용) —
   kakao:
