--- a/.github/workflows/ci-cd-prod.yml
+++ b/.github/workflows/ci-cd-prod.yml
@@ -25,16 +25,14 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
 
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+
       - name: Build with Gradle Wrapper
         run: ./gradlew clean build -x test
 
-      - name: Docker Image Build
-- name: Set image tag
-  run: echo "IMAGE_TAG=$(date +%Y%m%d-%H%M%S)-${GITHUB_SHA::7}" >> $GITHUB_ENV
-  
-...
-
-docker build -t ${{ secrets.DOCKER_USERNAME }}/berich:${{ env.IMAGE_TAG }} .
+      - name: Set image tag
+        run: echo "IMAGE_TAG=$(date +%Y%m%d-%H%M%S)-${GITHUB_SHA::7}" >> $GITHUB_ENV
 
       - name: DockerHub 로그인
         uses: docker/login-action@v3
@@ -42,13 +40,19 @@ docker build -t ${{ secrets.DOCKER_USERNAME }}/berich:${{ env.IMAGE_TAG }} .
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Docker Image Build
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/berich:${{ env.IMAGE_TAG }} .
+
       - name: Docker Hub Push
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/berich:latest
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/berich:${{ env.IMAGE_TAG }}
 
   deploy-prod:
     needs: build-docker-image
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
+    env:
+      IMAGE_NAME: berich
+      AWS_REGION: ap-northeast-2
 
     steps:
       - name: Configure AWS credentials
@@ -64,7 +68,7 @@ docker build -t ${{ secrets.DOCKER_USERNAME }}/berich:${{ env.IMAGE_TAG }} .
 
       - name: Build, tag, and push Docker image to ECR
         run: |
-          IMAGE_URI=${{ steps.login-ecr.outputs.registry }}/${{ env.IMAGE_NAME }}:latest
+          echo "IMAGE_URI=${{ steps.login-ecr.outputs.registry }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}" >> $GITHUB_ENV
           docker build -t $IMAGE_URI .
           docker push $IMAGE_URI
 
