--- a/.github/workflows/ci-cd-dev.yml
+++ b/.github/workflows/ci-cd-dev.yml
@@ -35,6 +35,9 @@ jobs:
       - name: Build with Gradle Wrapper
         run: ./gradlew clean build -x test
 
+      - name: Set image tag
+        run: echo "IMAGE_TAG=$(date +%Y%m%d-%H%M%S)-${GITHUB_SHA::7}" >> $GITHUB_ENV
+
       - name: DockerHub Login
         uses: docker/login-action@v3
         with:
@@ -42,10 +45,10 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Docker Image Build
-        run:  docker build -t ${{ secrets.DOCKER_USERNAME }}/berich:latest .
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/berich:${{ env.IMAGE_TAG }} .
 
       - name: Docker Hub Push
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/berich:latest
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/berich:${{ env.IMAGE_TAG }}
 
   deploy-to-ec2:
     needs: build-docker-image
