fix: [BR-22] 요구사항에 맞게 docker-compose 및 workflow 최종 수정

--- a/.github/workflows/ci-cd-dev.yml
+++ b/.github/workflows/ci-cd-dev.yml
@@ -3,13 +3,15 @@ name: [development] CI/CD
 on:
   push:
     branches:
-      - develop  # develop 브랜치 기준으로 실행
+      - develop
 
 jobs:
   build-docker-image:
     runs-on: ubuntu-latest
     permissions:
       contents: read
+    outputs:
+      image_tag: ${{ steps.set-tag.outputs.image_tag }}
     steps:
       - name: Checkout source
         uses: actions/checkout@v4
@@ -36,7 +38,8 @@ jobs:
         run: ./gradlew clean build -x test
 
       - name: Set image tag
-        run: echo "IMAGE_TAG=$(date +%Y%m%d-%H%M%S)-${GITHUB_SHA::7}" >> $GITHUB_ENV
+        id: set-tag
+        run: echo "image_tag=$(date +%Y%m%d-%H%M%S)-${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
 
       - name: DockerHub Login
         uses: docker/login-action@v3
@@ -45,15 +48,17 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Docker Image Build
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/berich:${{ env.IMAGE_TAG }} .
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/berich:${{ steps.set-tag.outputs.image_tag }} .
 
       - name: Docker Hub Push
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/berich:${{ env.IMAGE_TAG }}
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/berich:${{ steps.set-tag.outputs.image_tag }}
 
   deploy-to-ec2:
     needs: build-docker-image
     if: github.ref == 'refs/heads/develop'
     runs-on: ubuntu-latest
+    env:
+      IMAGE_TAG: ${{ needs.build-docker-image.outputs.image_tag }}
     steps:
       - name: SSH into EC2 and deploy
         uses: appleboy/ssh-action@master
@@ -62,39 +67,28 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            
             set -e
-            
-            # 배포 디렉터리 준비
+
             mkdir -p ~/deploy
             cd ~/deploy
-      
-            # 현재 날짜/시간을 기준으로 스트림 ID 생성
-            LOG_STREAM_ID=$(date +"%Y%m%d-%H%M%S")  # 예: 20250414-123456
-            
-            # .env 파일 없으면 생성
-            if [ ! -f ".env" ]; then
-              echo "DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }}" > .env
-              echo "LOG_STREAM_ID=${LOG_STREAM_ID}" >> .env
-              echo "PROFILE=dev" >> .env
-            fi
-      
-            # Docker 로그인
+
+            LOG_STREAM_ID=$(date +"%Y%m%d-%H%M%S")
+
+            echo "DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }}" > .env
+            echo "IMAGE_TAG=${IMAGE_TAG}" >> .env
+            echo "LOG_STREAM_ID=${LOG_STREAM_ID}" >> .env
+            echo "PROFILE=dev" >> .env
+
             echo "${{ secrets.DOCKER_PASSWORD }}" | sudo docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-      
-            # 기존 컨테이너 제거
+
             if [ -f "docker-compose.yml" ]; then
               sudo docker-compose down
             fi
-      
-            # 최신 docker-compose.yml 받아오기
-            curl -L https://raw.githubusercontent.com/${{ github.repository }}/develop/docker-compose.dev.yml
-      
-            # 최신 이미지 pull
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/berich:latest
-      
-            # 오래된 이미지 정리
+
+            curl -L -o docker-compose.yml https://raw.githubusercontent.com/${{ github.repository }}/develop/docker-compose.dev.yml
+
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/berich:${IMAGE_TAG}
+
             sudo docker image prune -f
-      
-            # 환경 변수로 LOG_STREAM_ID 전달하며 compose 실행
+
             sudo -E docker-compose up -d --force-recreate --remove-orphans
