--- a/.github/workflows/ci-cd-dev.yml
+++ b/.github/workflows/ci-cd-dev.yml
@@ -57,8 +57,6 @@ jobs:
     needs: build-docker-image
     if: github.ref == 'refs/heads/develop'
     runs-on: ubuntu-latest
-    env:
-      IMAGE_TAG: ${{ needs.build-docker-image.outputs.image_tag }}
     steps:
       - name: SSH into EC2 and deploy
         uses: appleboy/ssh-action@master
@@ -68,27 +66,28 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             set -e
-
+  
+            IMAGE_TAG=${{ needs.build-docker-image.outputs.image_tag }}
+            LOG_STREAM_ID=$(date +"%Y%m%d-%H%M%S")
+  
             mkdir -p ~/deploy
             cd ~/deploy
-
-            LOG_STREAM_ID=$(date +"%Y%m%d-%H%M%S")
-
+  
             echo "DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }}" > .env
             echo "IMAGE_TAG=${IMAGE_TAG}" >> .env
             echo "LOG_STREAM_ID=${LOG_STREAM_ID}" >> .env
             echo "PROFILE=dev" >> .env
-
+  
             echo "${{ secrets.DOCKER_PASSWORD }}" | sudo docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
+  
             if [ -f "docker-compose.yml" ]; then
               sudo docker-compose down
             fi
-
+  
             curl -L -o docker-compose.yml https://raw.githubusercontent.com/${{ github.repository }}/develop/docker-compose.dev.yml
-
+  
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/berich:${IMAGE_TAG}
-
+  
             sudo docker image prune -f
-
+  
             sudo -E docker-compose up -d --force-recreate --remove-orphans
