--- a/.github/workflows/ci-cd-prod.yml
+++ b/.github/workflows/ci-cd-prod.yml
@@ -44,6 +44,9 @@ jobs:
       - name: Docker Image Build
         run: docker build -t ${{ secrets.DOCKER_USERNAME }}/berich:${{ env.IMAGE_TAG }} .
 
+      - name: Docker Image Build
+        run: docker build -f Dockerfile-prod -t ${{ secrets.DOCKER_USERNAME }}/berich:${{ steps.set-tag.outputs.image_tag }} .
+
       - name: Docker Hub Push
         run: docker push ${{ secrets.DOCKER_USERNAME }}/berich:${{ env.IMAGE_TAG }}
 
