--- a/.github/workflows/ci-cd-dev.yml
+++ b/.github/workflows/ci-cd-dev.yml
@@ -36,12 +36,7 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Build with Gradle Wrapper
-        run: ./gradlew clean build -x test
-
-      - name: Check current directory and build/libs content before copying jar
-        run: |
-          pwd
-          ls -l build/libs
+        run: ./gradlew clean bootJar -x test
 
       - name: Copy JAR to app.jar
         run: cp build/libs/*.jar build/libs/app.jar
