fix: [BR-22] deploy 스크립트에서 image_tag 변수 선언

--- a/.github/workflows/ci-cd-dev.yml
+++ b/.github/workflows/ci-cd-dev.yml
@@ -71,6 +71,7 @@ jobs:
           script: |
             set -e
             
+            IMAGE_TAG="${{ needs.build-docker-image.outputs.image_tag }}"
             LOG_STREAM_ID=$(date +"%Y%m%d-%H%M%S")
 
             mkdir -p ~/deploy
